# ML-sandbox-public

./: .gitignore  README.md
3D_semantic_seg/: .gitignore  Dockerfile  README.md  docker-compose.yml  download_camera_lidar_data.PS1  environment.yml  rules.md
3D_semantic_seg/src/: main.py
3D_semantic_seg/src/utils/: utils.py  utils_lidar.py  utils_plotting.py
object_detection/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
object_detection/cpp/: CMakeLists.txt  Dockerfile  config.json  docker-compose.yml  main  main.cpp
object_detection/python/: Dockerfile  app.py  config.json  docker-compose.yml  main.py
reinforcement_learning/causal-explorer/: setup.py
